Add instances crud functionallity to the api
