# api/api/controllers/route_tables.js
@@ -1,9 +1,0 @@
-'use strict';
-
-module.exports = {
-    create_route_table: create_route_table,
-    read_route_table: read_route_table,
-    update_route_table: update_route_table,
-    delete_route_table: delete_route_table,
-    list_route_tables: list_route_tables,
-};
