# api/api/controllers/subnets.js
@@ -1,9 +1,0 @@
-'use strict';
-
-module.exports = {
-    create_subnet: create_subnet,
-    read_subnet: read_subnet,
-    update_subnet: update_subnet,
-    delete_subnet: delete_subnet,
-    list_subnets: list_subnets,
-};
