# api/api/controllers/vpcs.js
@@ -1,9 +1,0 @@
-'use strict';
-
-module.exports = {
-    create_vpc: create_vpc,
-    read_vpc: read_vpc,
-    update_vpc: update_vpc,
-    delete_vpc: delete_vpc,
-    list_vpcs: list_vpcs,
-};
